# brain-image-analyzer

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py
burst_analyzer/: lifprocessor.py  main.py
pulse_analyzer/: analyze.py  cluster.py  count_analyzis.py  cube_plot.py  differences.py  driver.py  heatmap.py  lifprocessor.py  main.py  old_main.py  plot.py  tiles.py
pulse_analyzer/tools/: __init__.py  pulses.py
