[metadata]
url = https://github.com/christian-moench/brain-image-analyzer
author = Christian Mönch
author_email = christian.moench@web.de
description = A tool to analyze bursts in microscopy images
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
install_requires =
    bioformats
    datalad >= 0.18.0
    matplotlib
    scikit-image

packages = find_namespace:
include_package_data = True

[options.packages.find]
include = video_analyzer*

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
devel =
    pytest
    pytest-cov
    coverage

[options.entry_points]
console_scripts =
    burst_analyzer = burst_analyzer.main:cli

[coverage:report]
show_missing = True
